--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -19,4 +19,5 @@ body {
   margin: 0;
   font-family: $thin-font;
   overflow-x: hidden;
+  user-select: none;
 }
